--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,1 +1,113 @@
+html {
+  font-size: 16px;
+}
+header {
+  display: flex;
+  height: 64px;
+  width:auto;
+  background-color: yellow;
 
+}
+
+.logo {
+  display: flex;
+  margin-left: 24px;
+  align-items: center;
+  width:auto;
+}
+.colmar {
+  display: flex;
+  align-items: center;
+  width: 100%;
+
+}
+.flex-end {
+  display: flex;
+  align-items: center;
+}
+.flex-end nav{
+
+  display: flex;
+  White-space: nowrap;
+  width:100%;
+  justify-content: flex-end;
+
+}
+
+nav li {
+  margin-right: 16px;
+}
+nav li:last-child {
+  margin-right: 24px;
+}
+.flex-end li {
+    list-style-type: none;
+}
+.banner {
+  display:flex;
+  width: 100%
+  height: 764px;
+  border:2px solid black;
+}
+.first-pic {
+  border: 2px solid black;
+  width: 60%;
+  height: 700px;
+  background-image: url("../images/banner.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  margin: 32px 24px;
+
+
+
+
+
+}
+.banner img {
+
+
+
+
+}
+.learn {
+padding-top: 150px;
+
+}
+.start-btn {
+  dispaly: flex;
+  background-color: brown;
+  color: white;
+  width: 100%;
+  height: 32px;
+  line-height: 2 rem;
+
+}
+.start-btn span {
+  display: flex;
+  justify-content: center;
+}
+
+
+.top-Bot {
+  margin-top: 32px;
+  margin-bottom: 32px;
+
+}
+.left-right {
+margin-left: 24px;
+margin-right: 24px;
+}
+ h1{
+  font-size: bold;
+  font-size: 3.2rem;
+}
+h2{
+  font-size: bold;
+}
+h3 {
+
+}
+h4 {
+
+}
