--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -49,6 +49,10 @@ nav li:last-child {
   height: 764px;
   background-color: grey;
 }
+.ban-state {
+  margin-top: 1.4rem;
+  margin-bottom: 1.4rem;
+}
 .first-pic {
   border: 2px solid black;
   width: 50%;
@@ -59,6 +63,10 @@ nav li:last-child {
   background-size: cover;
   margin: 32px 24px;
 }
+.learn {
+padding-top: 150px;
+
+}
 .container2 {
   display:flex;
   width: 100%;
@@ -68,30 +76,34 @@ nav li:last-child {
 }
 .container2-A {
   height: 100%;
-  width:60%;
+  width: 50%;
   background-color: inherit;
 
 }
 .orientation {
+  display:flex;
+  flex-direction: row;
+
   height: 100%;
-  width:40%;
+  width:50%;
   border: 2px solid black;
   background-color: inherit;
 
 }
 .orientation-date {
   width: 100%;
-  height:33%;
-  border: 2px solid black;
+  height: auto;
+  background-image: url("../images/information-orientation.jpg");
+  background-repeat: no-repeat;
 }
 .campus {
   width: 100%;
-  height:33%;
+  height:auto;
   border: 2px solid black;
 }
 .guest {
   width: 100%;
-  height:33%;
+  height:auto;
   border: 2px solid black;
 }
 
@@ -104,14 +116,14 @@ nav li:last-child {
 
 .all-course {
   height: 766px;
-  width:100%;
+  width:5%;
   background-color: light grey;
 }
 .practice {
   display: flex;
   flex-direction: row;
   border: 2px solid black;
-  width: 60%;
+  width: 95%;
   height: 466px;
   background-image: url("../images/information-main.jpg");
   background-repeat: no-repeat;
@@ -123,12 +135,9 @@ nav li:last-child {
   display: block;
   justify-content: flex-end;
 }
-.learn {
-padding-top: 150px;
 
-}
 .start-btn {
-  dispaly: flex;
+  display: flex;
   background-color: brown;
   color: white;
   width: 100%;
@@ -137,8 +146,12 @@ padding-top: 150px;
 
 }
 .start-btn span {
+
   display: flex;
-  justify-content: center;
+  margin: 0 auto;
+  padding-top: 0.5rem;
+
+
 }
 
 
