--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -73,7 +73,7 @@ padding-top: 150px;
 .container2 {
   display:flex;
   width: 100%;
-  height: 743px;
+  height: 855px;
   background-color: white;
 
 
@@ -81,7 +81,7 @@ padding-top: 150px;
 .container2-A {
   height: 100%;
   width: 60%;
-  background-color: inherit;
+  background-color: silver;
 
 
 }
@@ -142,12 +142,7 @@ padding-top: 150px;
 }
 
 
-.container3 {
-  width: auto;
-  height: 933px;
-  background-color: grey;
 
-}
 
 .all-course {
   height: 766px;
@@ -185,34 +180,39 @@ padding-top: 150px;
   display: flex;
   margin: 0 auto;
   padding-top: 0.5rem;
-
-
 }
-
-
 
 
 .start-learning {
-dispaly: block;
+padding-top:
+display: flex;
 height: 88px;
 width: 100%;
-background-color: white
-}
+background-color: yellow;
 
-.container4{
+}
+.container3 {
+  display:flex;
+
   width: auto;
   height: 933px;
-  background-color: white;
+  background-color: grey;
+
 }
 
+.course-box {
+
+}
 .course-top {
 
 }
 .course-btm {
 
 }
-.course-box {
-
+.container4{
+  width: auto;
+  height: 933px;
+  background-color: white;
 }
 .top-bot {
   margin-top: 32px;
