--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,5 +1,6 @@
 html {
   font-size: 16px;
+
 }
 header {
   display: flex;
@@ -8,9 +9,11 @@ header {
   background-color: white;
 
 }
+
 a {
    text-decoration: none;
    font-size: 1.5rem;
+   color: navy;
 }
 .logo {
   display: flex;
@@ -32,16 +35,17 @@ a {
 
   display: flex;
   White-space: nowrap;
-  width:100%;
+
   justify-content: flex-end;
 
 }
 
 nav li {
+  display: flex;
   margin-right: 16px;
 }
 nav li:last-child {
-  margin-right: 24px;
+  margin-right: 0px;
 }
 .flex-end li {
     list-style-type: none;
@@ -49,46 +53,76 @@ nav li:last-child {
 .banner {
   display:flex;
   width: 100%;
-  height: 764px;
-  background-color: grey;
+  height: auto;
+  background-color: #98B8CB;
+
+
+
 }
+.first-pic {
+  flex:6;
+  height: 600px;
+}
+.first-pic img{
+  width: 100%;
+  height: 100%;
+
+
+}
+
 .ban-state {
   margin-top: 1.4rem;
   margin-bottom: 1.4rem;
-}
-.first-pic {
-  border: 2px solid black;
-  width: 50%;
-  height: 700px;
-  background-image: url("../images/banner.jpg");
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  margin: 32px 24px;
+
 }
 .learn {
-padding-top: 150px;
+padding-top: 100px;
+padding-left: 1.5rem;
+color: #193F56;
+width: 40%;
+
+
+}
+.learn h2{
+  color: white;
+}
+
+.start-btn {
+  display: flex;
+  background-color:#193F56;
+  color: white;
+  width: 50%;
+  height: 60px;
+  opacity: 0.8;
+
+
+
+}
+
+.start-btn span {
+
+  display: flex;
+  margin: auto;
+  font-size: 2rem;
+
+}
 /*container 2*/
-}
+
 .container2 {
-  display:flex;
+  display: flex;
   width: 100%;
-  height: 855px;
-  background-color: white;
+  height: auto;
+  color: #193F56;
 
 
 }
-.container2-A {
-  height: 100%;
-  width: 60%;
-  background-color: silver;
 
 
-}
 .orientation {
-  height: 90%;
+  height: auto;
   width:40%;
   background-color: inherit;
+  color: #193F56;
 
 }
 .orientation-date {
@@ -132,6 +166,7 @@ padding-top: 150px;
   display:inline-flex;
   width: 100%;
   height: auto;
+
 }
 
 .guest img{
@@ -139,39 +174,16 @@ padding-top: 150px;
   height:auto;
 
 }
-
-.practice {
-  display: flex;
-  flex-direction: row;
-  width: 95%;
-  height: 550px;
-  background-image: url("../images/information-main.jpg");
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  margin: 32px 24px;
+.campus-text h3{
+  line-height: 1.5rem;
 }
+
 .practice span{
   display: block;
   justify-content: flex-end;
 }
 
 
-.start-btn {
-  display: flex;
-  background-color: brown;
-  color: white;
-  width: 100%;
-  height: 32px;
-  line-height: 2 rem;
-
-}
-.start-btn span {
-
-  display: flex;
-  margin: 0 auto;
-  padding-top: 0.5rem;
-}
 
 /*container 3 start learning*/
 .container3 {
@@ -179,7 +191,7 @@ padding-top: 150px;
   flex-direction: row;
   width: 100%;
   height: 1300px;
-  background-color: grey;
+  background-color: #CEE8F4;
 
 }
 .start-learning {
@@ -188,9 +200,9 @@ height: 88px;
 width: 100%;
 padding-top: 2rem;
 padding-bottom: 2rem;
-background-color: yellow;
 text-align: center;
 display:table;
+color:white;
 
 }
 .start-learning span {
@@ -202,41 +214,62 @@ display:table;
 
 
 .course-box {
-height: 1100px;
+height: 1000px;
 margin: 0rem 4.5rem;
+margin-bottom: 32px;;
+
 }
 .course-top {
 display:flex;
 width: 100%;
 height: 50%;
-border: solid black;
+
+
 }
 .course-btm {
   display:flex;
   width: 100%;
   height: 50%;
-  border: solid black;
 }
-
 .top-bot {
 
   margin-top: 32px;
   margin-bottom: 32px;
-
 }
 .course-size {
   height:auto;
   flex: 1;
-  border: 1px solid black;
+  margin-right: 2rem;
+  justify-content: space-between;
+  background-color: white;
+
+
 }
+.course-size h1 {
+  padding-top: 1rem;
+  padding-left: 1rem;
+  padding-bottom: 1rem:
+}
+
+.course-size h2 {
+  padding-top: 1rem;
+  padding-left: 1rem;
+  padding-bottom: 1rem:
+}
+#margint-right {
+  margin-right: 0px;
+
+}
+
 .course-size img {
   width: 100%;
   height: auto%;
 
 }
+/*contaiiner4*/
 .container4 {
   width: 100%;
-  height: 1300px;
+  height: auto;
   background-color: white;
 }
 
@@ -246,7 +279,6 @@ border: solid black;
   width: 100%;
   padding-top: 2rem;
   padding-bottom: 2rem;
-  background-color: yellow;
   text-align: center;
   display:table;
 
@@ -259,46 +291,103 @@ border: solid black;
 }
 .cont4-wrap {
   display: flex;
-  height: 1200px;
+  height: auto;
   width: 100%;
   margin-left: 1.5rem;
 }
 .vids {
 height: auto;
 width: 60%;
-border: 1px solid black;
+
 }
+
 .vids video {
-  width: 100%
-  height:50%;
+  width: 100%;
+  height:auto;
 }
+
+.vids-text {
+
+}
+
 .fisma-wrap {
+  display: inline-flex;
+  flex-direction: column;
   height: 100%;
   width: 40%;
-  border: 1px solid black;
+  background-color: #CEE8F4;
+
+
+}
+.fisma {
+  display:flex;
+  height: auto;
+  margin: 16px 0px;
+
+}
+.now-and-then {
+  display: flex;
+  height: auto;
+
+}
+.cont4-text {
+height: auto;
+width: auto;
+margin-left: 1rem;
+}
+.cont4-text p {
+  padding-top: 1.5rem;
 }
 
 .left-right {
 margin-left: 24px;
 margin-right: 24px;
 }
+p {
+  font-size: 1.2rem;
+  font-family: 'Lato', sans-serif;}
  h1{
   font-size: bold;
   font-size: 3.2rem;
+  color: #193F56;
+  font-family: 'Source Serif Pro', serif;
 }
 h2{
   font-size: bold;
   font-size: 2rem;
+    color: #193F56;
+
+  font-family: 'Lato', sans-serif;
 }
 h3 {
   font-size: bold;
   font-size: 1.5rem;
+  font-family: 'Lato', sans-serif;
 }
 h4 {
+  font-family: 'Lato', sans-serif;
 
 }
 footer {
-  background-color: pink;
+  display: flex;
   height: 100px;
+  width: 100%;
+  box-sizing: border-box;
+  padding-top: 1rem;
+  padding-left: 1.5rem;
+  background-color: #98B8CB;
+
+  color: white;
+}
+footer div{
+  padding-right: 1.5rem;
+  margin-left:auto; margin-right:0;
+}
+.left-right p{
+  margin: 1.5rem 0rem;
+  line-height: 1.5rem;
+}
+.left-right h1 {
+  margin-top: 2rem
 
 }
