--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -58,7 +58,7 @@ nav li:last-child {
     list-style-type: none;
 }
 .banner {
-  flex-basis:auto;
+  width: 100%;
   height: auto;
 }
 .first-pic {
@@ -68,7 +68,7 @@ nav li:last-child {
 
 }
 .first-pic img{
-  flex-basis:auto;
+  width: 100%;
   height: 100%;
 }
 
