--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -228,6 +228,7 @@ color:white;
 display:flex;
 flex-direction: column;
 justify-content: space-between;
+background-color: white;
 height: 8rem;
 
 }
