--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -321,7 +321,7 @@ height: 50%;
   display: block;
   height: 88px;
   width: 100%;
-
+  padding-top: 2rem;
   padding-bottom: 2rem;
   text-align: center;
   display:table;
@@ -515,7 +515,7 @@ footer div{
 
   .course-box {
     display:block;
-    margin-bottom: 32px;
+
     height: 1000px;
     margin-left: 1.5rem;
   }
