--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -343,6 +343,10 @@ margin-right: 1.5rem;
   height:auto;
 }
 
+.vids-text {
+  display: none;
+}
+
 .vids-text p{
 margin-top: 0.5rem;
 margin-bottom: 2rem;
@@ -539,6 +543,8 @@ display:none;
   display:table;
 }
 .vids-text {
+    display: flex;
+    flex-direction: column;
 
 }
 }
