--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -157,7 +157,7 @@ nav li {
 .campus {
   display: block;
   height: auto;
-  width: 100%;
+  width :100%;
 }
 .guest {
 display: block;
@@ -171,7 +171,7 @@ height: auto;
 }
 .ori-img-mob {
   display: block;
-  with: 100%;
+  flex-basis: auto;
 
 }
 
