--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -100,11 +100,12 @@ nav li {
   display: flex;
   background-color:#193F56;
   color: white;
-  flex-basis: auto;
+  width: 100%;
   height: 3.75rem;
   opacity: 0.8;
   transition-property: background-color;
   transition-duration: 750ms;
+  padding-right: 1rem;
 }
 
 .start-btn:hover {
