--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -9,21 +9,17 @@ header {
   background-color: white;
 
 }
-
 a {
    text-decoration: none;
    font-size: 1.5rem;
    color: green;
    padding-left: 0.5rem;
-
 }
 a:hover{
-
   color:   #cc9900;
 }
 .logo {
   display: none;
-
 }
 .mob-logo {
   display:flex;
@@ -45,7 +41,6 @@ a:hover{
   display: flex;
   White-space: nowrap;
   justify-content: flex-end;
-
 }
 
 nav li {
@@ -59,16 +54,11 @@ nav li {
 .first-pic {
   width:100%;
   height: auto;
-
-
 }
 .first-pic img{
   width: 100%;
   height: 100%;
 }
-
-
-
 .learn {
   padding-top: 2rem;
   width: auto;
@@ -81,20 +71,19 @@ nav li {
 .learn h1 {
   font-size: 2.5rem;
 }
+.learn h2{
+  color: white;
 
+}
 .ban-state {
   margin-top: 2rem;
   margin-bottom: 1.5rem;
-
 }
 
 .ban-state h2 {
   font-size: 1rem;
 }
-.learn h2{
-  color: white;
 
-}
 /*start button media at 597*/
 .start-btn {
   display: flex;
@@ -111,13 +100,11 @@ nav li {
 .start-btn:hover {
   background-color: #132639;
 }
-
 .start-btn span {
 
   display: flex;
   margin: auto;
   font-size: 2rem;
-
 }
 
 /*container 2*/
@@ -129,7 +116,6 @@ nav li {
   color: #193F56;
   margin-right: 1rem;
   margin-left: 1rem;
-
 }
 .container2-A {
   display: none;
@@ -141,60 +127,33 @@ nav li {
 .mobile-img {
   width: 100%;
 }
-
 .orientation {
   width: 100%;
   display:block;
-
-
 }
 
-
-.orientation-date {
+.orientation-box {
   display: block;
   height: auto;
   width :100%;
-
-}
-.campus {
-  display: block;
-  height: auto;
-  width :100%;
-}
-.guest {
-display: block;
-width: 100%;
-height: auto;
-
 }
 .ori-img{
   display:none;
-
 }
 .ori-img-mob {
   display: block;
   width:inherit;
-
-
 }
-
-
-
 .campus-text {
   display flex:
   justify-content:start;
 }
 .campus-text h2 {
-
   padding-top: 3.75rem;
-
 }
 .campus-text h3 {
-
   padding: 0.5rem 0.5rem;
-
 }
-
 .campus-text h3{
   line-height: 1.5rem;
 }
@@ -203,9 +162,6 @@ height: auto;
   display: block;
   justify-content: flex-end;
 }
-
-
-
 /*container 3 start learning*/
 .container3 {
   display:block;
@@ -225,42 +181,32 @@ padding-bottom: 1rem;
 .start-learning span {
 
   text-align: center;
-
 }
-
 .mob {
 display:flex;
 flex-direction: column;
 justify-content: space-between;
 background-color: white;
 height: 14rem;
-
 }
 .mob div {
   display: flex;
   background-color: #d3d3d3;
   height:2rem;
-
 }
 .mob div span {
   display: flex;
   margin: auto;
   font-size: 1rem;
 }
-
 .course-box {
 display:none;
 
-
 }
-
-
 .course-top {
 display:flex;
 flex-basis:auto;
 height: 50%;
-
-
 }
 .course-btm {
   display:flex;
@@ -268,7 +214,6 @@ height: 50%;
   height: 50%;
 }
 .top-bot {
-
   margin-top: 2rem;
   margin-bottom: 2rem;
 }
@@ -278,10 +223,7 @@ height: 50%;
   margin-right: 2rem;
   justify-content: space-between;
   background-color: white;
-
-
 }
-
 .course-size h1 {
   padding-top: 1rem;
   padding-left: 1rem;
@@ -298,13 +240,11 @@ height: 50%;
   margin-right: 0rem;
 
 }
-
 .course-size img {
   width:100%;
   height: auto;
 
 }
-
 .course-size h3 {
   font-size: bold;
   font-weight: bold;
@@ -319,13 +259,10 @@ height: 50%;
   height: auto;
   background-color: white;
 }
-
 .thesis {
   padding-bottom: 1rem;
   padding-top: 2rem;
-
 }
-
 .thesis span{
   display:table-cell;
   vertical-align:middle;
@@ -335,13 +272,12 @@ height: 50%;
   display: flex;
   height: auto;
   flex-basis:auto;
-  margin-left: 1.5rem;
 
 }
 .vids {
 width: 100%;
 height: auto;
-margin-right: 1.5rem;
+
 
 }
 
@@ -452,7 +388,11 @@ footer h3 {
 
 }
 @media (min-width: 400px) {
+
+  /*Banner*/
   .banner {
+    margin-left: 1.5rem;
+
     display:flex;
     background-color: #98B8CB;
   }
@@ -477,6 +417,8 @@ footer h3 {
   .flex-end li {
       list-style-type: none;
   }
+
+  /*Header*/
   .first-pic {
     flex:6;
     height: 37.5rem;
@@ -486,6 +428,7 @@ footer h3 {
     margin-bottom: 2rem;
 
   }
+  /*Course Box*/
 .container2 {
     display: flex;
     width: 100%;
@@ -495,6 +438,8 @@ footer h3 {
   display:block;
   height:auto;
   flex-basis:60%;
+  margin-left: 1rem;
+  margin-right: 1.5rem;
 }
 .container2-A img {
   display: block;
@@ -509,18 +454,12 @@ footer h3 {
   background-color: inherit;
   color: #193F56;
 }
-.orientation-date{
-  display:inline-flex;
-}
-
-.campus{
-  display:inline-flex;
+.orientation-box {
+  display: inline-flex;;
+  height: auto;
+  width :100%;
 
 }
-
-.guest {
-    display:inline-flex;
-  }
 
 .ori-img{
   display:inline-flex;
@@ -531,15 +470,12 @@ footer h3 {
   display: none;
 }
 
-  .course-box {
-    display:block;
-    margin-bottom: 2rem;
-    margin-left: 1.5rem;
 
-  }
 .mob {
 display:none;
 }
+
+/*container 3*/
 .start-learning {
   height: 5.5px;
   width:100%;
@@ -552,7 +488,7 @@ display:none;
   vertical-align:middle;
   font-size: 1.5rem;
 }
-
+/*container4*/
 .fisma-wrap {
   display: inline-flex;
   flex-direction: column;
